<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.screen.upload.UploadFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/camera_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/img_preview"
            android:layout_width="0dp"
            android:layout_height="225dp"
            android:layout_margin="@dimen/padding_big"
            android:contentDescription="@string/camera"
            android:src="@drawable/baseline_insert_photo_black_24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/camera_toolbar" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_gallery"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/padding_big"
            android:layout_marginTop="@dimen/padding_big"
            android:padding="@dimen/padding_big"
            android:text="@string/gallery"
            app:layout_constraintEnd_toStartOf="@id/btn_camera"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_preview" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_camera"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/padding_big"
            android:layout_marginTop="@dimen/padding_big"
            android:padding="@dimen/padding_big"
            android:text="@string/camera"
            app:layout_constraintBottom_toBottomOf="@id/btn_gallery"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@id/btn_gallery"
            app:layout_constraintTop_toBottomOf="@id/img_preview"
            app:layout_constraintWidth="1" />

        <TextView
            android:id="@+id/tv_include_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_extra_big"
            android:text="@string/include_location"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/img_preview"
            app:layout_constraintTop_toBottomOf="@id/btn_gallery" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/btn_include_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/tv_include_location"
            app:layout_constraintEnd_toEndOf="@id/img_preview"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toEndOf="@id/tv_include_location"
            app:layout_constraintTop_toTopOf="@+id/tv_include_location" />

        <TextView

            android:id="@+id/tv_latitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_extra_big"
            android:text="@string/latitude"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="@id/tv_include_location"
            app:layout_constraintTop_toBottomOf="@id/tv_include_location"
            tools:visibility="visible" />


        <TextView

            android:id="@+id/tv_latitude_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/tv_longitude"
            app:layout_constraintEnd_toEndOf="@+id/btn_include_location"
            app:layout_constraintStart_toStartOf="@+id/tv_longitude_value"
            app:layout_constraintTop_toTopOf="@+id/tv_latitude"
            app:layout_constraintVertical_bias="0.0"
            tools:text="20.0000000"
            tools:visibility="visible" />

        <TextView
            tools:visibility="visible"
            android:visibility="gone"
            android:id="@+id/tv_longitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_big"
            android:text="@string/longitude"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/tv_latitude"
            app:layout_constraintTop_toBottomOf="@+id/tv_latitude" />

        <TextView
            tools:visibility="visible"
            android:visibility="gone"
            android:id="@+id/tv_longitude_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_big"
            app:layout_constraintBottom_toBottomOf="@+id/tv_longitude"
            app:layout_constraintEnd_toEndOf="@+id/btn_include_location"
            app:layout_constraintStart_toEndOf="@+id/tv_longitude"
            app:layout_constraintTop_toTopOf="@+id/tv_longitude"
            app:layout_constraintVertical_bias="0.0"
            tools:text="20.0000000" />


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text"
            android:layout_width="0dp"
            android:layout_height="300dp"
            android:layout_marginHorizontal="@dimen/padding_big"
            android:layout_marginTop="@dimen/padding_big"
            android:background="@drawable/edit_text_border"
            android:gravity="start"
            android:hint="@string/description_hint"
            android:inputType="text"
            android:padding="@dimen/padding_medium"
            android:scrollbars="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_longitude"
            app:layout_goneMarginTop="@dimen/padding_extra_big" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_upload"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_big"
            android:layout_marginBottom="@dimen/padding_big"
            android:padding="@dimen/padding_big"
            android:text="@string/upload"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/edit_text"
            app:layout_constraintHorizontal_bias="0.437"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="@id/edit_text"
            app:layout_constraintTop_toBottomOf="@id/edit_text" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>