<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.screen.auth.RegisterFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/register_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_register_section"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="@dimen/padding_extra_big"
        android:text="@string/register"
        android:textAppearance="@style/TextAppearance.Material3.HeadlineLarge"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_toolbar" />

    <TextView
        android:id="@+id/tv_register_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_medium"
        android:text="Please sign up to continue"
        android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="@+id/tv_register_section"
        app:layout_constraintTop_toBottomOf="@+id/tv_register_section"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/img_profile"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:alpha="0"
        android:src="@drawable/dicoding"
        app:layout_constraintBottom_toBottomOf="@+id/tv_register_desc"
        app:layout_constraintEnd_toEndOf="@+id/textInput_email"
        app:layout_constraintTop_toTopOf="@+id/tv_register_section"
        tools:alpha="1" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

    <com.example.storyapp.ui.customviews.MyEditText
        android:id="@+id/textInput_email"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_big"
        android:drawablePadding="@dimen/padding_medium"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline" />


    <com.example.storyapp.ui.customviews.MyEditText
        android:id="@+id/textInput_name"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_big"
        android:drawablePadding="@dimen/padding_medium"
        android:hint="@string/username"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInput_email" />

    <com.example.storyapp.ui.customviews.MyEditText
        android:id="@+id/textInput_password"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_big"
        android:drawablePadding="@dimen/padding_medium"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInput_name" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/padding_big"
        android:text="@string/register"
        android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
        android:textStyle="bold"
        app:cornerRadius="@dimen/padding_medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textInput_password"
        app:layout_constraintStart_toStartOf="@+id/textInput_password" />


</androidx.constraintlayout.widget.ConstraintLayout>