<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.screen.main.DetailStoryActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/detail_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_big">

            <ImageView
                android:id="@+id/img_photo"
                android:layout_width="match_parent"
                android:layout_height="225dp"
                android:layout_margin="@dimen/padding_extra_big"
                android:layout_marginTop="@dimen/padding_extra_big"
                android:transitionName="image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/tv_name_section"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="32dp"
                android:minWidth="120dp"
                android:text="@string/username"
                android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/img_photo" />

            <TextView
                android:id="@+id/tv_name_desc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:gravity="start"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                app:layout_constraintEnd_toEndOf="@+id/img_photo"
                app:layout_constraintHorizontal_bias="0.125"
                app:layout_constraintStart_toEndOf="@+id/tv_name_section"
                app:layout_constraintTop_toTopOf="@+id/tv_name_section"
                tools:text="@string/username" />

            <TextView
                android:id="@+id/tv_created_date_section"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:minWidth="120dp"
                android:text="@string/created_date"
                android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/tv_name_section"
                app:layout_constraintTop_toBottomOf="@+id/tv_name_desc" />

            <TextView
                android:id="@+id/tv_create_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:gravity="start"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                app:layout_constraintEnd_toEndOf="@+id/img_photo"
                app:layout_constraintStart_toEndOf="@+id/tv_created_date_section"
                app:layout_constraintTop_toTopOf="@+id/tv_created_date_section"
                tools:text="@string/created_date" />

            <TextView
                android:id="@+id/tv_content_section"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:minWidth="120dp"
                android:text="@string/description"
                android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/tv_created_date_section"
                app:layout_constraintTop_toBottomOf="@+id/tv_create_date" />

            <TextView
                android:id="@+id/tv_content"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="1dp"
                android:gravity="start"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                app:layout_constraintEnd_toEndOf="@+id/img_photo"
                app:layout_constraintStart_toEndOf="@+id/tv_content_section"
                app:layout_constraintTop_toTopOf="@+id/tv_content_section"
                tools:text="@string/description" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</LinearLayout>

